--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,5 @@
         ],
         "@babel/preset-env"
     ],
-    "plugins": [
-        "@babel/plugins-proposal-class-properties"
-    ]
+    "plugins": ["@babel/plugin-proposal-class-properties"]
 }
