--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "parcel build src/index.html",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
@@ -19,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/jonathanedempsey/complete-intro-to-react/issues"
   },
-  "homepage": "https://github.com/jonathanedempsey/complete-intro-to-react#readme",
+  "homepage": "https://jonathanedempsey.github.io/complete-intro-to-react",
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.13.4",
@@ -32,6 +34,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.2.3",
     "parcel": "^1.12.3",
     "prettier": "^2.4.1"
   },
